Fixed map scroll on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1412,3 +1412,9 @@ th.rotate > div > span {
     width: 100%;
     height: 100%;
 }
+.overlay{
+    width: 100%;
+    min-height: 500px;
+    position: absolute;
+    top: 0;
+}
